--- a/src/app/toolbar/components/no-user/no-user.component.html
+++ b/src/app/toolbar/components/no-user/no-user.component.html
@@ -1,10 +1,10 @@
 <span>
   <button mat-button (click)="login.emit()" class="toolbar__btn shadow_010">
     <mat-icon>account_box</mat-icon>
-    Login
+    Zaloguj
   </button>
-  <button mat-button (click)="register.emit()" class="toolbar__btn shadow_005">
+  <!-- <button mat-button (click)="register.emit()" class="toolbar__btn shadow_005">
     <mat-icon>edit</mat-icon>
     Register
-  </button>
+  </button> -->
 </span>
