--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -5,23 +5,16 @@
 }
 
 .card {
-    // TODO:
-    top: 15%;
-    padding: 30px 20%;
     background-color: rgba(0, 0, 0, .7);
-    border-radius: 0;
     color: white;
-    margin-bottom: 1em;
+    padding: 2em;
+}
+
+.list {
+    width: 80%;
+    margin-left: 10%;
 }
 
 img {
-    height: 15em;
-}
-
-button {
-    position: absolute;
-    bottom: 2em;
-    right: 2em;
-    padding: 1em;
-    border-radius: 60px;
+    height: 10em;
 }
