--- a/src/app/home/containers/home/home.component.html
+++ b/src/app/home/containers/home/home.component.html
@@ -1,21 +1,12 @@
 <div class="container" appAddTheme>
-    <mat-card class="card">
-        <div align="center">
-            <img src='../../../../assets/icons/icon_white.svg' />
-            <br><br>
-            <h1>
-                <p>
-                    Welcome to Hackathon!
-                </p>
-            </h1>
-        </div>
-    </mat-card>
-    <mat-card class="card">
-        <div align="center">
-            <p>
-                Begin with <a routerLink="#" routerLinkActive="active">something</a> or <a routerLink="#"
-                    routerLinkActive="active">something other</a> now!
-            </p>
-        </div>
-    </mat-card>
+    <div class="card" align="center">
+        <img src='../../../../assets/icons/icon_white.svg' />
+        <br><br>
+        <h1>
+            Witaj w centrum zarządzania kryzysowego NFZ!
+        </h1>
+    </div>
+    <div class="list">
+        <app-list></app-list>
+    </div>
 </div>
