--- a/src/app/shared/containers/info/info.component.html
+++ b/src/app/shared/containers/info/info.component.html
@@ -15,10 +15,10 @@
     <br>
 
     <p>
-      You will be redirected in a while.
+      Zostaniesz przekierowany za chwilę.
     </p>
 
-    <a routerLink="/home" routerLinkActive="active">Redirect back.</a>
+    <a routerLink="/home" routerLinkActive="active">Przekieruj teraz.</a>
   </mat-card>
 
 </div>
