--- a/src/app/toolbar/components/user-settings/user-settings.component.html
+++ b/src/app/toolbar/components/user-settings/user-settings.component.html
@@ -13,6 +13,6 @@
     mat-menu-item 
     (click)="logout.emit()">
     <mat-icon>logout</mat-icon>
-    Logout
+    Wyloguj
   </button>
 </mat-menu>
