--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -11,10 +11,20 @@
 }
 
 .list {
-    width: 80%;
-    margin-left: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
 }
 
 img {
     height: 10em;
+}
+
+button {
+    position: absolute;
+    bottom: 2em;
+    right: 2em;
+    padding: 1em;
+    border-radius: 60px;
 }
