--- a/src/app/home/containers/list/list.component.html
+++ b/src/app/home/containers/list/list.component.html
@@ -2,6 +2,6 @@
   <h2>{{ doctor }}</h2>
   <br>
   <div cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let movie of movies" cdkDrag>{{movie}}</div>
+    <div class="example-box" *ngFor="let patient of patients" cdkDrag>{{patient}}</div>
   </div>
 </div>
