--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,8 +4,8 @@
 
 .light-theme {
     $primary: mat-palette($mat-blue);
-    $accent: mat-palette($mat-blue, A400, A100, A700);
-    $warn: mat-palette($mat-red);
+    $accent: mat-palette($mat-light-blue, A400, A100, A700);
+    $warn: mat-palette($mat-indigo);
     $background: mat-palette($mat-grey, 900);
     $foreground: mat-palette($mat-grey, 50);
     $theme: mat-light-theme($primary, $accent, $warn);
@@ -13,9 +13,9 @@
 }
 
 .dark-theme {
-    $primary: mat-palette($mat-grey);
-    $accent: mat-palette($mat-grey, A400, A100, A700);
-    $warn: mat-palette($mat-red);
+    $primary: mat-palette($mat-blue);
+    $accent: mat-palette($mat-light-blue, A400, A100, A700);
+    $warn: mat-palette($mat-indigo);
     $background: mat-palette($mat-grey, 900);
     $foreground: mat-palette($mat-grey, 50);
     $theme: mat-dark-theme($primary, $accent, $warn);
