--- a/src/app/add-patient/containers/patient-data/patient-data.component.scss
+++ b/src/app/add-patient/containers/patient-data/patient-data.component.scss
@@ -8,15 +8,15 @@
     width: 100%;
 }
 
-.big {
+.button {
     margin-top: 5px;
     width: 70%;
 }
 
 .card {
-    top: 5%;
-    width: 70%;
-    margin-left: 15%;
+    top: 7%;
+    width: 60%;
+    margin-left: 20%;
 }
 
 img {
