--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -5,7 +5,7 @@
 }
 
 .card {
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgba(0, 183, 255, 0.7);
     color: white;
     padding: 2em;
 }
