--- a/src/app/add-patient/containers/patient-data/patient-data.component.html
+++ b/src/app/add-patient/containers/patient-data/patient-data.component.html
@@ -40,12 +40,12 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <input type="text" placeholder="Lekarz" matInput [matAutocomplete]="auto" [(ngModel)]="patient.doctor" name="doctor">
-        <mat-autocomplete #auto="matAutocomplete">
+
+        <mat-select placeholder="Lekarz" [(ngModel)]="patient.doctor" name="doctor">
           <mat-option *ngFor="let doc of doctors()" [value]="doc">
             {{Doctor[doc]}}
           </mat-option>
-        </mat-autocomplete>
+        </mat-select>
         <mat-icon matSuffix>accessible</mat-icon>
       </mat-form-field>
 
