--- a/src/app/home/containers/home/home.component.html
+++ b/src/app/home/containers/home/home.component.html
@@ -3,14 +3,16 @@
         <img src='../../../../assets/icons/icon_white.svg' />
         <br><br>
         <h1>
-            Witaj w centrum zarządzania kryzysowego NFZ!
+            Witaj w centrum zarządzania kolejką na SOR!
         </h1>
     </div>
     <br><br>
     <div class="list" fxLayout="row wrap" fxLayoutGap="32px" fxLayoutAlign="flex-start">
-        <app-list fxFlex="0 1 calc(33.3% - 32px)" [doctor]="'Okulista'" [patients]="movies"></app-list>
-        <app-list fxFlex="0 1 calc(33.3% - 32px)" [doctor]="'Dermatolog'" [patients]="movies"></app-list>
-        <app-list fxFlex="0 1 calc(33.3% - 32px)" [doctor]="'Interlista'" [patients]="movies"></app-list>
+            <app-list 
+                *ngFor="let item of doctors()" 
+                fxFlex="0 1 calc(33.3% - 32px)" 
+                [doctor]="Doctor[item]" [patients]="getList(item)">
+            </app-list>
     </div>
 </div>
 
