--- a/src/app/home/containers/home/home.component.html
+++ b/src/app/home/containers/home/home.component.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<button mat-raised-button color="primary" routerLink="/add-patient">
+<button class="button" mat-raised-button color="primary" routerLink="/add-patient">
     <mat-icon>add</mat-icon>
     <span style="margin-left: 1em"><b>Dodaj Pacjenta</b></span>
 </button>
