--- a/src/app/add-patient/containers/patient-list/list.component.html
+++ b/src/app/add-patient/containers/patient-list/list.component.html
@@ -5,8 +5,10 @@
       <br>
       <h2>Lekarz: {{ Doctor[doctor] }}</h2>
       <br>
-      <div cdkDropList class="list" (cdkDropListDropped)="drop($event)">
-        <div class="box" *ngFor="let patient of list" cdkDrag [ngClass]="{'myPatient': patient.peselNumber==myPatient.peselNumber}">
+      <div cdkDropList class="list" (cdkDropListDropped)="drop($event)"
+        [ngClass]="{'dark': theme == 'dark-theme'}">
+        <div class="box" *ngFor="let patient of list" cdkDrag [ngClass]="{'myPatient': patient.peselNumber==myPatient.peselNumber}"
+          [ngClass]="{'dark': theme == 'dark-theme'}">
           <p align="center">
             <b>
               {{ patient.name }} {{ patient.surname }} 
