--- a/src/app/add-patient/containers/patient-list/list.component.scss
+++ b/src/app/add-patient/containers/patient-list/list.component.scss
@@ -59,6 +59,11 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
+.dark {
+    color: white;
+    background: rgb(71, 71, 71);
+}
+
 .button {
     width: 50%;
 }
