--- a/src/app/home/containers/list/list.component.scss
+++ b/src/app/home/containers/list/list.component.scss
@@ -4,26 +4,31 @@
   border: solid 1px #ccc;
   min-height: 60px;
   display: block;
-  background: white;
   border-radius: 4px;
   overflow: hidden;
+  color: rgba(0, 0, 0, 0.87);
+  background: white;
 }
-
-.icon {}
 
 .box {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
   box-sizing: border-box;
-  background: white;
   font-size: 14px;
+  color: rgba(0, 0, 0, 0.87);
+  background: white;
+}
+
+.dark {
+  color: white;
+  background: rgb(71, 71, 71);
+}
+
+.box :hover {
+  cursor: pointer;
+  color: #1a81e2
 }
 
 .box:last-child {
   border: none;
-}
-
-.list.cdk-drop-list-dragging .box:not(.cdk-drag-placeholder) {
-  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
