dialog is now better

--- a/src/app/home/containers/list/dialog-overview.html
+++ b/src/app/home/containers/list/dialog-overview.html
@@ -1,5 +1,5 @@
 <div mat-dialog-content>
-  <p>Na pewno chcesz zakończyć kurację tego pacjenta?</p>
+  <p>Na pewno chcesz zakończyć kurację pacjenta {{ data.name }}?</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Nie</button>
