toolbar styles and no errors

--- a/src/app/toolbar/components/no-user/no-user.component.html
+++ b/src/app/toolbar/components/no-user/no-user.component.html
@@ -1,5 +1,5 @@
 <span>
-  <button mat-button (click)="login.emit()" class="toolbar__btn shadow_010">
+  <button mat-button (click)="login.emit()" class="toolbar__btn shadow">
     <mat-icon>account_box</mat-icon>
     Zaloguj
   </button>
