--- a/src/app/toolbar/components/user-settings/user-settings.component.scss
+++ b/src/app/toolbar/components/user-settings/user-settings.component.scss
@@ -1,3 +1,5 @@
 .shadow {
-    background-color: rgba(0, 0, 0, .15);
+    background-color: rgba(0, 0, 0, .1);
+    border-left: solid 2px rgba(0, 0, 0, 0.05);
+    border-radius: 0;
 }
