--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -8,6 +8,7 @@
     background-color: rgba(0, 183, 255, 0.7);
     color: white;
     padding: 2em;
+    box-shadow: 0px 3px 0px 0px rgba(191,191,191,1);
 }
 
 .list {
