--- a/src/app/themes/components/themes/themes.component.html
+++ b/src/app/themes/components/themes/themes.component.html
@@ -1,4 +1,4 @@
-<button mat-button [matMenuTriggerFor]="menu" class="toolbar__btn">
+<button mat-button [matMenuTriggerFor]="menu" class="toolbar__btn shadow">
   <mat-icon>format_color_fill</mat-icon>
 </button>
 <mat-menu #menu="matMenu" [overlapTrigger]="false">
