--- a/src/app/toolbar/components/no-user/no-user.component.scss
+++ b/src/app/toolbar/components/no-user/no-user.component.scss
@@ -2,10 +2,8 @@ mat-icon {
     margin-right: 5px;
 }
 
-.shadow_010 {
-    background-color: rgba(0, 0, 0, .15);
-}
-
-.shadow_005 {
-    background-color: rgba(0, 0, 0, .15);
+.shadow {
+    background-color: rgba(0, 0, 0, .1);
+    border-left: solid 2px rgba(0, 0, 0, 0.05);
+    border-radius: 0;
 }
