--- a/src/app/toolbar/containers/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/containers/toolbar/toolbar.component.scss
@@ -12,7 +12,8 @@ img {
 }
 
 .toolbar__main {
-    background-color: rgba(0, 0, 0, .3);
+    background-color: rgba(0, 0, 0, 0.1);
+    border-right: solid 2px rgba(0, 0, 0, 0.05);
     border-radius: 0;
     height: 100%;
     margin-left: -20px;
