--- a/src/app/auth/containers/login-page/login-page.component.scss
+++ b/src/app/auth/containers/login-page/login-page.component.scss
@@ -5,7 +5,11 @@
 
 .form {
     margin-left: calc(35% - 30px);
-    top: 25%;
+    top: 18%;
     width: 30%;
     padding: 30px;
+}
+
+img {
+    height: 10em;
 }
