--- a/src/app/home/containers/home/home.component.html
+++ b/src/app/home/containers/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container" appAddTheme>
-    <div class="card" align="center">
+    <div class="card" align="center" [ngClass]="{'dark': theme=='dark-theme'}">
         <img src='../../../../assets/icons/icon_white.svg' />
         <br><br>
         <h1>
