--- a/src/app/home/containers/home/home.component.scss
+++ b/src/app/home/containers/home/home.component.scss
@@ -11,6 +11,11 @@
     box-shadow: 0px 3px 0px 0px rgba(191,191,191,1);
 }
 
+.dark {
+    background-color: rgba(43, 43, 43, 0.7);
+    box-shadow: 0px 3px 0px 0px rgb(46, 46, 46);
+}
+
 .list {
     display: flex;
     flex-direction: row;
