--- a/src/app/add-patient/containers/patient-data/patient-data.component.scss
+++ b/src/app/add-patient/containers/patient-data/patient-data.component.scss
@@ -2,6 +2,7 @@
     height: 100%;
     width: 100%;
     overflow: auto;
+    font-size: 16px;
 }
 
 .full-width {
@@ -17,6 +18,7 @@
     top: 7%;
     width: 40%;
     margin-left: 30%;
+    margin-bottom: 10em;
 }
 
 img {
