--- a/src/app/home/containers/list/dialog-overview.html
+++ b/src/app/home/containers/list/dialog-overview.html
@@ -1,7 +1,8 @@
 <div mat-dialog-content>
-  <p>Na pewno chcesz zakończyć kurację pacjenta {{ data.name }}?</p>
+  <p>Na pewno chcesz usunąć pacjenta {{ data.name }} z listy oczekujących?</p>
 </div>
-<div mat-dialog-actions>
+<br>
+<div align="right">
   <button mat-button (click)="onNoClick()">Nie</button>
   <button mat-button cdkFocusInitial (click)="onYesClick()">Tak</button>
 </div>
