--- a/src/app/home/containers/edit/dialog-overview.html
+++ b/src/app/home/containers/edit/dialog-overview.html
@@ -1,7 +1,7 @@
 <div mat-dialog-content>
   <p>Na pewno chcesz przesunąć pacjenta {{ data.name }}?</p>
 </div>
-<div mat-dialog-actions>
+<div align="right">
   <button mat-button (click)="onNoClick()">Nie</button>
   <button mat-button cdkFocusInitial (click)="onYesClick()">Tak</button>
 </div>
