--- a/src/app/home/containers/list/list.component.scss
+++ b/src/app/home/containers/list/list.component.scss
@@ -10,6 +10,8 @@
 }
 
 .box {
+  min-width: 100px;
+  max-width: 500px;
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
   box-sizing: border-box;
