--- a/src/app/toolbar/containers/toolbar/toolbar.component.html
+++ b/src/app/toolbar/containers/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
 
   <button mat-button (click)="navigateToHome()" class="toolbar__main">
     <img src='../../../../assets/icons/icon_white.svg' />
-    <span>Kolejka SOR</span>
+    <span>im SORry</span>
   </button>
 
   <span class="spacer"></span>
