--- a/src/app/add-patient/containers/patient-data/patient-data.component.html
+++ b/src/app/add-patient/containers/patient-data/patient-data.component.html
@@ -35,7 +35,7 @@
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <input matInput required placeholder="Peesel" [(ngModel)]="patient.peselNumber" name="peselNumber">
+        <input matInput required placeholder="Pesel" [(ngModel)]="patient.peselNumber" name="peselNumber">
         <mat-icon matSuffix>fingerprint</mat-icon>
       </mat-form-field>
 
